@@ -1,6 +1,8 @@
 <pre>
 2008-XX-XX:
     * version 2.0 (probably)
+    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
+      special versions for the old behavior
     * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
       VimperatorLeave respectively
     * add :scriptnames
